update code review

--- a/docs/account-portal/disable-account-portal.mdx
+++ b/docs/account-portal/disable-account-portal.mdx
@@ -1,6 +1,6 @@
 ---
 title: Disabling the Account Portal
-description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+description: Learn how to disable the Account Portal.
 ---
 
 # Disabling the Account Portal
