update code review

--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -84,7 +84,7 @@ function App() {
 
 In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the props into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
-## Dashboard Fallbacks
+## Dashboard fallbacks
 
 If you provide users with a direct link to the Account Portal pages, you can specify the redirects as a fallback in the Clerk Dashboard. 
 
