--- a/docs/account-portal/disable-account-portal.mdx
+++ b/docs/account-portal/disable-account-portal.mdx
@@ -1,63 +1,23 @@
 ---
-title: Account Portal
-description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+title: Disabling the Account Portal
+description: Learn how to disable the Account Portal.
 ---
-
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Disabling the Account Portal
 
-A majority of our customers prefer to leave the Account Portal enabled, even if they are using their own embedded components / custom flows. This helps with testing as well as providing an alternative path for users when needed.
+If you would like to disable the Account Portal, you may do so under **Account Portal -> Danger** in the Clerk Dashboard. Please ensure that you set up an authentication flow for your users via the instructions below first, as applying this setting will immediately result in a 404 for all Account Portal pages.
 
-However, if you do want to disable it entirely, you may do so via the ‘danger’ tab in the dashboard. Please ensure that you set up your embedded components (or custom flows) via the instructions below first as this will applying this setting will immediately result in a 404 for all Account Portal pages.
+<Callout type="danger">
+  We recommend leaving the Account Portal enabled, even if you do choose to set up your own authentication flow. This helps with testing as well as providing an alternative path for users when needed.
+</Callout>
 
-![Disable Account Portal](/docs/images/account-portal/account_portal_disable.png)
+<Images 
+  width={1624}
+  height={1103}
+  src="/docs/images/account-portal/account_portal_disable.png"
+  alt="Disable the Account Portal"
+/>
 
+## Customizing your sign-up/sign-in flow
 
-## Adding your own Sign In / Sign Up components
-
-If you want to migrate away from the Account Portal or simply just embed your own sign in / sign up components as well. This is easy to do as well, you simply need to add the components and provide the paths. 
-
-For this, you can follow along in any of our quickstart guides for the framework of your choice:
-
-
-<div className="container my-4 min-w-full">
-  <div className="grid xl:grid-cols-3 xl:grid-rows-2 md:grid-cols-2 md:grid-rows-3 justify-center gap-x-7">
-    <FrameworkCards
-      title="Next.js"
-      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
-      link="/docs/quickstarts/nextjs"
-      cta="Get Started"
-      icon="/docs/images/logos/nextjs.svg"
-      iconWidth="40"
-    />
-    <FrameworkCards
-      title="React"
-      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
-      link="/docs/quickstarts/react"
-      cta="Get Started"
-      icon="/docs/images/logos/react.svg"
-    />
-    <FrameworkCards
-      title="Remix"
-      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
-      link="/docs/quickstarts/remix"
-      cta="Get Started"
-      icon="/docs/images/logos/remix.svg"
-    />
-    <FrameworkCards
-      title="Expo"
-      description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
-      link="/docs/quickstarts/expo"
-      cta="Get Started"
-      icon="/docs/images/logos/expo.svg"
-    />
-    <FrameworkCards
-      title="RedwoodJS"
-      description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
-      link="/docs/quickstarts/redwood"
-      cta="Get Started"
-      icon="/docs/images/logos/redwood.svg"
-    />
-  </div>
-</div>
+If you would like to migrate away from the Account Portal and create your own sign-up/sign-in flow, Clerk provides a set of [pre-built components](/docs/components/overview) that you can use, or you can opt to build your own [custom flow](/docs/custom-flows/overview).
