PR changes and change to Satellite domains
- Minor copy edits, and some other pr changes from Alexis
- Reframing the doc as "Adding Satellite Domains"

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -1,60 +1,42 @@
 ---
-title: Multi domain setup
-description: Learn how to achieve a multi domain setup in order to share authentication and session management across domains.
+title: Adding Satellite Domains
+description: Learn how to share sessions across different domains by adding satellite domains to your application.
 ---
 
-import { Callout, Steps} from "nextra-theme-docs";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs, Tabs, Tab } from "@/components/CodeBlockTabs";
+# Adding Satellite Domains
 
-# Multi domain setup
+Clerk supports sharing sessions across different domains by adding one or many satellite domains to an application.
 
-Clerk supports sharing sessions across multiple domains with a primary and satellite configuration.
+Your "primary" domain is where the authentication state lives, and satellite domains are able to securely read that state from the primary domain, enabling a seamless authentication flow across domains.
 
-Having multiple domains for your instance enables you to have central authentication and session management across all of them.
+Users must complete the sign in flow on the primary domain, either using Clerk’s [`<SignIn />`](/docs/authentication/components/sign-in) component or our [`useSignIn()`](/docs/custom-flows/use-sign-up#use-sign-in) hook.
 
-There is always a primary domain, but there can be many satellite domains.
-
-The primary domain is the source of truth for the user's authentication state. Users must complete the sign-in flow on this domain, either using Clerk’s [`<SignIn />`](/docs/authentication/components/sign-in) component or our [`useSignIn()`](/docs/custom-flows/use-sign-up#use-sign-in) hook.
-
-As for satellite domains, When users initially request one, they are transparently redirected through the primary domain to determine the authentication state. If users want to sign-in, they must be redirected to a sign-in flow hosted on the primary domain, then redirected back.
+To access authentication state from a satellite domain, users will be transparently redirected to the primary domain. If users need to sign-in, they must be redirected to a sign-in flow hosted on the primary domain, then redirected back to the originating satellite domain.
 
 
-## How to set up a multi domain project?
+## How to add Satellite Domains
 
 <Steps>
 
 ### Create your application and install Clerk
-Build your application just like you would any other application with Clerk. Currently, multi-domain can be added to any Next.js or Remix application. For other React frameworks, multi-domain is still supported as long as you do not use server rendering or hydration.
-
-Once you create an instance via the dashboard, you will be prompted to choose a domain. We consider this to be the primary domain.
-
-We will be using the domain `primary.dev` for the purposes of this guide.
-
-<Callout type="info">
-Note: For multi-domain, you must configure your sign-in flow to run within your primary application, for example on `/sign-in`.
+<Callout type="warning">
+Currently, multi-domain can be added to any Next.js or Remix application. For other React frameworks, multi-domain is still supported as long as you do not use server rendering or hydration.
 </Callout>
 
-### Configure your primary app
+To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.dev/). Once you create an instance via the dashboard, you will be prompted to choose a domain. This is your primary domain. For the purposes of this guide, the primary domain will be `primary.dev`.
 
-Configuration for this app is the same as for any other app using Clerk without having multiple domains.
+When building your sign-in flow, you must configure it to run within your primary application, e.g. on /sign-in.
 
-<CodeBlockTabs options={["Next.js", "Remix"]}>
-```env copy filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_...
-CLERK_SECRET_KEY=sk_live_...
-```
-```env filename=".env" copy
-CLERK_PUBLISHABLE_KEY=pk_live_...
-CLERK_SECRET_KEY=sk_live_...
-```
-</CodeBlockTabs>
+<Callout type="info">
+For more information about creating your application, check out our [detailed guide](/docs/quickstarts/setup-clerk).
+</Callout>
 
-### Register your satellite domain
+### Add your first satellite domain
 
-Go to the "Domains" tab in the Clerk dashboard and add a new satellite domain of your choice. Then, follow the instructions provided.
+Go to the **Domains** tab in the Clerk dashboard and add a new satellite domain of your choice. Then, follow the instructions provided.
 
-We will use the domain `satellite.dev` for the purposes of this guide.
+For the purposes of this guide, the satellite domain will be "satellite.dev".
+
 
 <Images
 src="/docs/images/advance/multi-domain/satellite-domain-add.png"
@@ -69,8 +51,8 @@ Now that you have created the satellite application, it's time to configure it a
 
 <CodeBlockTabs options={["Next.js", "Remix"]}>
 ```env copy filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_...
-CLERK_SECRET_KEY=sk_live_...
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+CLERK_SECRET_KEY={{secret}}
 
 NEXT_PUBLIC_CLERK_DOMAIN=satellite.dev
 NEXT_PUBLIC_CLERK_IS_SATELLITE=true
@@ -78,8 +60,8 @@ NEXT_PUBLIC_CLERK_IS_SATELLITE=true
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=https://primary.dev/sign-in
 ```
 ```env filename=".env" copy
-CLERK_PUBLISHABLE_KEY=pk_live_...
-CLERK_SECRET_KEY=sk_live_...
+CLERK_PUBLISHABLE_KEY={{pub_key}}
+CLERK_SECRET_KEY={{secret}}
 
 CLERK_SIGN_IN_URL=https://primary.dev/sign-in
 CLERK_DOMAIN=satellite.dev
@@ -177,17 +159,15 @@ The `URL` mentioned above is the request url for server side usage or the curren
 
 ### Ready to go 🎉
 
-Your satellite application should now sync with your primary! 
+Your satellite application should now be able to access the authentication state from your satellite domain! 
 
 You can see it in action by: 
 1. Visiting the primary domain and signing in.
 2. Visiting the satellite domain.
-3. You now have session in the satellite domain, so you can see the `<UserProfile />` component and update your information.
+3. You now have an active session in the satellite domain, so you can see the `<UserProfile />` component and update your information.
 
 You can repeat this process and create as many satellite applications as you need.
 
 </Steps>
 
-## Example repositories
- 
-Coming soon
+If you have any questions about satellite domains, or you're having any trouble setting this up, please contact support@clerk.com
