--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -360,7 +360,7 @@ const styles = StyleSheet.create({
 
 ### OAuth login
 
-If you want to add OAuth login flows to your Expo application, Clerk's OAtuh hook allows you to handle both sign in and sign up in a single flow.
+If you want to add OAuth login flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
 
 ```tsx filename="hookes/warmUpBrowser.tsx"" copy
 import React from "react";
