After Alexis Review

--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -46,25 +46,35 @@ export default authMiddleware({
       }
     }
   },
-  publicRoutes: ["/publicly-available-pages"],
+  publicRoutes: ["/publicly-available-page"],
 });
 ```
-
-{/* TODO (Alexis and Shehzad)
-Does the afterSignInUrl and afterSignUpUrl props get passed to the ClerkProvider as well??
-Also, I thought using the `<RedirectToSignIn />` component will navigate to the URL configured (thru env variables or auth middleware). [Source](https://clerk.com/docs/components/control/redirect-to-signin#redirect-to-sign-in)
-Should these props instead be passed to the `<SignIn />` and `<SignUp />` components? [Source](https://clerk.com/docs/components/authentication/sign-in#props) */}
 
 ## `afterSignInUrl` and `afterSignUpUrl` props
 
 You can explicitly define the redirect paths by passing the `afterSignInUrl` and `afterSignUpUrl` props to the respective components.
 
 ### Control components
+<CodeBlockTabs options={['ClerkProvider', 'RedirectToSignIn', 'RedirectToSignUp']}>
 
-```javascript copy
+```javascript filename="example.js" copy
 function App() {
   return (
     <ClerkProvider publishableKey={clerkPubKey} afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' >
+      <SignedIn>
+        <Welcome />
+      </SignedIn>
+      <SignedOut>
+        <RedirectToSignIn />
+      </SignedOut>
+    </ClerkProvider>
+  );
+}
+```
+```javascript filename="example.js" copy
+function App() {
+  return (
+    <ClerkProvider publishableKey={clerkPubKey}>
       <SignedIn>
         <Welcome />
       </SignedIn>
@@ -75,6 +85,21 @@ function App() {
   );
 }
 ```
+```javascript filename="example.js" copy
+function App() {
+  return (
+    <ClerkProvider publishableKey={clerkPubKey} >
+      <SignedIn>
+        <Welcome />
+      </SignedIn>
+      <SignedOut>
+        <RedirectToSignUp afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' />
+      </SignedOut>
+    </ClerkProvider>
+  );
+}
+```
+</CodeBlockTabs>
 
 <Callout type="info" emoji="💡">
   `<RedirectToSignIn />` or `<RedirectToSignUp />` child components will always take precedence over `<ClerkProvider />`. 
@@ -84,6 +109,64 @@ function App() {
 
 In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the props into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
+  ```jsx copy filename="pages/index.js"
+  import { SignInButton, SignUpButton } from "@clerk/nextjs";
+
+  export default function Home() {
+    return (
+      <div>
+      <h1> Sign in </h1>
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx copy filename="example.js"
+  import { SignInButton, SignUpButton } from "@clerk/clerk-react";
+
+  export default function Example() {
+    return (
+      <div>
+      <h1> Sign in </h1>
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx copy filename="pages/index.js"
+  import { SignInButton, SignUpButton } from "@clerk/remix";
+
+  export default function Home() {
+    return (
+      <div>
+      <h1> Sign in </h1>
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx copy filename="pages/index.js"
+  import { SignInButton, SignUpButton } from "gatsby-plugin-clerk";
+
+  export default function Home() {
+    return (
+      <div>
+      <h1> Sign in </h1>
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+      </div>
+    );
+  }
+  ```
+</CodeBlockTabs>
+
 ## Dashboard fallbacks
 
 If you provide users with a direct link to the Account Portal pages, you can specify the redirects as a fallback in the Clerk Dashboard. 
@@ -92,7 +175,9 @@ If you provide users with a direct link to the Account Portal pages, you can spe
   While we provide this functionality as a fallback, **we do not recommend** configuring this through the dashboard and encourage you to specify redirects in your application flows instead. 
 </Callout>
 
-### Paths
+<Steps>
+
+### Set your static fallback host
 
 For development, set your static fallback localhost (e.g. http://localhost:3000) that we will use if we are unable to retrieve a dev browser for your client. In production, this will always be your application homepage. 
 
@@ -103,9 +188,9 @@ For development, set your static fallback localhost (e.g. http://localhost:3000)
   alt="Account Portal paths"
 />
   
-### Redirects
+### Configure fallback redirects
 
-You can specify the fallback redirects through the Clerk Dashboard. 
+You can specify the fallback redirects through the Clerk Dashboard
 
 <Images 
   width={3248}
@@ -113,4 +198,4 @@ You can specify the fallback redirects through the Clerk Dashboard.
   src="/docs/images/account-portal/account_portal_redirects.png"
   alt="Account Portal redirects"
 />
-  
+</Steps>
