--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -5,7 +5,9 @@ description: The Account Portal offers a comprehensive solution for managing use
 
 # Getting started with the Account Portal  
 
-To integrate the Account Portal into your application, simply follow one of our [quickstart guides](/docs/quickstarts/overview). Once your application is set up, all you have to do is fire it up. Clerk will automatically redirect your users to the Account Portal sign-in/sign-up pages. Once a user has successfully authenticated themself, they will be automatically be redirected back to your application with an active session. 
+To integrate the Account Portal into your application, you need to simply follow one of our [quickstart guides](/docs/quickstarts/overview). 
+
+Once your application is set up, all you have to do is fire it up. Clerk will automatically redirect your users to the Account Portal sign-in/sign-up pages. Once a user has successfully authenticated themself, they will be automatically be redirected back to your application with an active session. 
 
 <Callout type="info" emoji="💡">
   **Dynamic Development Host Detection**  
