--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -9,9 +9,11 @@ In addition to the sign-in/sign-up pages, the Account Portal also provides the U
 
 You can use Clerk's Control Components to navigate your users to the appropriate page.
 
-<Tabs items={["User Profile Page", "Organization Profile Page","Create Organization Flow"]}>
-<Tab>
-# [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile)
+
+## User Profile Page
+
+
+The User Profile page is full-featured account management UI that allows users to manage their profile and security settings. 
 
 <Images 
   width={3248}
@@ -19,10 +21,14 @@ You can use Clerk's Control Components to navigate your users to the appropriate
   src="/docs/images/account-portal/account_portal_user_profile.png"
   alt="User Profile in Account Portal"
 />
-</Tab>
 
-<Tab>
-# [`<RedirectToOrganizationProfile/>`](/docs/components/control/redirect-to-organizationprofile)
+
+Redirect your authenticated users to their User profile page using the [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile) control component.
+
+
+## Organization Profile Page
+
+The Organization Profile page is a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
 <Images 
   width={3248}
@@ -30,10 +36,15 @@ You can use Clerk's Control Components to navigate your users to the appropriate
   src="/docs/images/account-portal/account_portal_org_profile.png"
   alt="Organization Profile in Account Portal"
 />
-</Tab>
 
-<Tab>
-# [`<RedirectToCreateOrganization/>`](/docs/components/control/redirect-to-createorganization)
+
+Redirect your authenticated users to their Organization's profile page using the [`<RedirectToOrganizationProfile/>`](/docs/components/control/redirect-to-organizationprofile) control component.
+
+
+
+## Create Organization Flow
+
+The organization creation flow is a UI that allows users to create brand new organizations within your application.
 
 <Images 
   width={3248}
@@ -41,5 +52,7 @@ You can use Clerk's Control Components to navigate your users to the appropriate
   src="/docs/images/account-portal/account_portal_create_org.png"
   alt="Create Organization flow in Account Portal"
 />
-</Tab>
-</Tabs>
+
+ Redirect your authenticated users to the Create Organization flow using the [`<RedirectToCreateOrganization/>`](/docs/components/control/redirect-to-createorganization) control component.
+
+
