--- a/docs/authentication/social-connections/microsoft.mdx
+++ b/docs/authentication/social-connections/microsoft.mdx
@@ -93,8 +93,7 @@ Navigate to your Azure application's **Token configuration** page, and click on 
 Select the `email` and `xms_pdl` claims for both **ID** and **Access**, and click on **Add**.
 
 <Callout type="info">
-    At the time of writing, the `xms_edov` claim is still in preview, and may not be available for all applications. So
-    we'll choose another one from the list and we'll rename it later on in the manifest.
+    At the time of writing, the `xms_edov` claim is still in preview, and may not be available for all applications. So we'll choose another one from the list and we'll rename it later on in the manifest.
 </Callout>
 
 ![Select claims](/docs/images/authentication-providers/microsoft/noauth-optional-claims-select.png)
