update headings in overview

--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -14,15 +14,16 @@ The Account Portal in Clerk is a powerful feature that allows you to streamline 
   alt="Account Portal"
 />
 
-# Why use the Account Portal?
+## Why use the Account Portal?
 
 The Account Portal provides all the pages your users need to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you’re looking for the fastest way to get your application up and running, then this is a great choice.
 
 However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our [prebuilt components](/docs/components/overview) or [custom flows](/docs/custom-flows/overview) instead.
 
-# How the Account Portal works
+## How the Account Portal works
 
-The Account Portal uses our [prebuilt Clerk components](/docs/components/overview) embedded on dedicated pages hosted for your application. Users are automatically redirected to and from your application for a seamless authentication experience.
+The Account Portal uses our [prebuilt Clerk components](/docs/components/overview) embedded on dedicated pages hosted for your application. Users are automatically redirected to and from your application for a seamless authentication experience.  
+
 
 <Images 
   width={4259}
