--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -9,7 +9,7 @@ After a user signs in or signs up, Clerk automatically redirects users back to y
 
 ## Environment variables
 
-You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to "/dashboard" after signing in, and to "/onboarding" after signing up.
+You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to `/dashboard` after signing in, and to `/onboarding` after signing up.
 
 <Tabs items={["Next.js", "Remix"]}>
 <Tab>
@@ -116,9 +116,15 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   export default function Home() {
     return (
       <div>
-      <h1> Sign in </h1>
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <h1>Welcome!</h1>
+
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign in
+        </SignInButton>
+
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign up
+        </SignUpButton>
       </div>
     );
   }
@@ -130,9 +136,15 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   export default function Example() {
     return (
       <div>
-      <h1> Sign in </h1>
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <h1>Welcome!</h1>
+
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign in
+        </SignInButton>
+
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign up
+        </SignUpButton>
       </div>
     );
   }
@@ -144,9 +156,15 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   export default function Home() {
     return (
       <div>
-      <h1> Sign in </h1>
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <h1>Welcome!</h1>
+
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign in
+        </SignInButton>
+
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign up
+        </SignUpButton>
       </div>
     );
   }
@@ -158,44 +176,17 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   export default function Home() {
     return (
       <div>
-      <h1> Sign in </h1>
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'/>
+        <h1>Welcome!</h1>
+
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign in
+        </SignInButton>
+
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+          Sign up
+        </SignUpButton>
       </div>
     );
   }
   ```
 </CodeBlockTabs>
-
-## Dashboard fallbacks
-
-If you provide users with a direct link to the Account Portal pages, you can specify the redirects as a fallback in the Clerk Dashboard. 
-
-<Callout type="info" emoji="💡">
-  While we provide this functionality as a fallback, **we do not recommend** configuring this through the dashboard and encourage you to specify redirects in your application flows instead. 
-</Callout>
-
-<Steps>
-
-### Set your static fallback host
-
-For development, set your static fallback localhost (e.g. http://localhost:3000) that we will use if we are unable to retrieve a dev browser for your client. In production, this will always be your application homepage. 
-
-<Images 
-  width={3248}
-  height={2112}
-  src="/docs/images/account-portal/account_portal_paths.png"
-  alt="Account Portal paths"
-/>
-  
-### Configure fallback redirects
-
-You can specify the fallback redirects through the Clerk Dashboard
-
-<Images 
-  width={3248}
-  height={2112}
-  src="/docs/images/account-portal/account_portal_redirects.png"
-  alt="Account Portal redirects"
-/>
-</Steps>
