--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -5,9 +5,9 @@ description: The Account Portal offers a comprehensive solution for managing use
 
 # Getting started with the Account Portal  
 
-To integrate the Account Portal into your application, you need to simply follow one of our [quickstart guides](/docs/quickstarts/overview). 
+To integrate the Account Portal into your application, simply follow one of our [quickstart guides](/docs/quickstarts/overview). 
 
-Once your application is set up, all you have to do is fire it up. Clerk will automatically redirect your users to the Account Portal sign-in/sign-up pages. Once a user has successfully authenticated themself, they will be automatically be redirected back to your application with an active session. 
+Once your application is set up, all you have to do is fire it up. Clerk will automatically redirect your users to the Account Portal sign-in/sign-up pages. Once a user has successfully authenticated themself, they will be automatically redirected back to your application with an active session. 
 
 <Callout type="info" emoji="💡">
   **Dynamic Development Host Detection**  
@@ -15,3 +15,62 @@ Once your application is set up, all you have to do is fire it up. Clerk will au
   For development environments, the development host (e.g. http://localhost:3000) is dynamically detected by Clerk at runtime and tied to your client browser. We store this as the ‘home origin’ for your application and it is equivalent to your application domain in production environments.
 </Callout>
 
+## Fallback redirects
+
+After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application by appending a `redirect_url` query param on the Account Portal page. However, if a user accesses an Account Portal page directly, they cannot be redirected back to your application since they didn't originate from your application. Don't worry, Clerk offers configurable fallback redirects.
+
+<Steps>
+
+### Set your static fallback host
+
+Set your fallback host under **Paths** in the Clerk Dashboard. 
+
+For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. In production, this will always be your application homepage.
+
+<Images 
+  width={3248}
+  height={2112}
+  src="/docs/images/account-portal/account_portal_paths.png"
+  alt="Account Portal paths"
+/>
+  
+### Configure fallback redirects
+
+Specify the fallback redirects under **Account Portal -> Redirects** in the Clerk Dashboard.
+
+<Images 
+  width={3248}
+  height={2112}
+  src="/docs/images/account-portal/account_portal_redirects.png"
+  alt="Account Portal redirects"
+/>
+
+</Steps>
+
+## Direct links
+
+If you would like to provide users with a direct link to an Account Portal page, you need to specify the redirect in the link so that users can be redirected to your application after their Account Portal flow.
+
+### Development 
+
+For development instances, you can use the following format for your direct links:
+
+`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=http://localhost:3000/dashboard`
+
+#### Example
+
+In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `http://localhost:3000/dashboard` after their Account Portal flow.
+
+`https://accounts.clerk.dev/sign-in?redirect_url=http://localhost:3000/dashboard`
+
+### Production
+
+For production instances, you can use the following format for your direct links:
+
+`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=https://<your-domain.com>/dashboard`
+
+#### Example
+
+In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://clerk.dev/dashboard` after their Account Portal flow.
+
+`https://accounts.clerk.dev/sign-in?redirect_url=https://clerk.dev/dashboard`
