--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -16,13 +16,13 @@ The Account Portal in Clerk is a powerful feature that allows you to streamline 
 
 ## Why use the Account Portal?
 
-The Account Portal provides all the pages your users need to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you’re looking for the fastest way to get your application up and running, then this is a great choice.
+The Account Portal provides the pages necessary for your users to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you’re looking for the fastest way to add authentication and user management to your application, then this is a great choice.
 
-However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our [prebuilt components](/docs/components/overview) or [custom flows](/docs/custom-flows/overview) instead.
+However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our fully customizable [prebuilt components](/docs/components/overview), or you can build your own [custom flows](/docs/custom-flows/overview) instead.
 
 ## How the Account Portal works
 
-The Account Portal uses our [prebuilt Clerk components](/docs/components/overview) embedded on dedicated pages hosted for your application. Users are automatically redirected to and from your application for a seamless authentication experience.  
+The Account Portal utilizes our [prebuilt Clerk components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers. After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application by appending a `redirect_url` query param on the Account Portal page. This way, users are automatically redirected to and from your application for a seamless authentication experience. To integrate the Account Portal with your application, check out our [setup guide](/docs/account-portal/getting-started).
 
 
 <Images 
@@ -32,7 +32,7 @@ The Account Portal uses our [prebuilt Clerk components](/docs/components/overvie
   alt="How the Account Portal works"
 />
 
-For each application environment, Clerk provides hosted pages including sign-up, sign-in, user profiles, organization profiles, and an organization creation flow.
+For each application environment, Clerk provides pages for sign-up, sign-in, user profile, organization profile, and organization creation flow.
 
 For development environments, Clerk will issue you a randomly generated domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following:
 
