--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -1,16 +1,16 @@
 ---
-title: User & Organization Pages | Account Portal
+title: User & Organization pages | Account Portal
 description: In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile and Create Organization flow out of the box. 
 ---
 
-# User & Organization Pages
+# User & Organization pages
 
-In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile, and Create Organization flow out of the box. 
+In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile, and Create Organization pages out of the box. 
 
 You can use Clerk's Control Components to navigate your users to the appropriate page.
 
 
-## User Profile Page
+## User Profile page
 
 
 The User Profile page is full-featured account management UI that allows users to manage their profile and security settings. 
@@ -23,10 +23,10 @@ The User Profile page is full-featured account management UI that allows users t
 />
 
 
-Redirect your authenticated users to their User profile page using the [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile) control component.
+Redirect your authenticated users to their User Profile page using the [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile) control component.
 
 
-## Organization Profile Page
+## Organization Profile page
 
 The Organization Profile page is a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
@@ -38,13 +38,13 @@ The Organization Profile page is a beautiful, full-featured organization managem
 />
 
 
-Redirect your authenticated users to their Organization's profile page using the [`<RedirectToOrganizationProfile/>`](/docs/components/control/redirect-to-organizationprofile) control component.
+Redirect your authenticated users to their Organization Profile page using the [`<RedirectToOrganizationProfile/>`](/docs/components/control/redirect-to-organizationprofile) control component.
 
 
 
-## Create Organization Flow
+## Create Organization page
 
-The organization creation flow is a UI that allows users to create brand new organizations within your application.
+The Create Organization page is a UI that allows users to create brand new organizations within your application.
 
 <Images 
   width={3248}
