--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -22,8 +22,9 @@ However, if you require more precise customization or prefer having your applica
 
 ## How the Account Portal works
 
-The Account Portal utilizes our [prebuilt Clerk components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers. After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application by appending a `redirect_url` query param on the Account Portal page. This way, users are automatically redirected to and from your application for a seamless authentication experience. To integrate the Account Portal with your application, check out our [setup guide](/docs/account-portal/getting-started).
+The Account Portal utilizes our [prebuilt Clerk components](/docs/components/overview), which are embedded into dedicated pages hosted on Clerk servers. 
 
+After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application along with the required authentication context. This way, users are automatically redirected to and from your application for a seamless experience. 
 
 <Images 
   width={4259}
@@ -32,16 +33,4 @@ The Account Portal utilizes our [prebuilt Clerk components](/docs/components/ove
   alt="How the Account Portal works"
 />
 
-For each application environment, Clerk provides pages for sign-up, sign-in, user profile, organization profile, and organization creation flow.
-
-For development environments, Clerk will issue you a randomly generated domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following:
-
-```sh
-<https://accounts>.[your-domain].com/sign-in
-<https://accounts>.[your-domain].com/sign-up
-<https://accounts>.[your-domain].com/user
-<https://accounts>.[your-domain].com/organization
-<https://accounts>.[your-domain].com/create-organization
-```
-
-You can access these links under **Account Portal -> Pages** in your Clerk dashboard.
+For each application environment, Clerk provides pages for sign-up, sign-in, user profile, organization profile, and organization creation flow. To integrate the Account Portal with your application, check out our [setup guide](/docs/account-portal/getting-started).
