--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -190,3 +190,47 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   }
   ```
 </CodeBlockTabs>
+
+## Direct links
+
+
+If a user accesses an Account Portal page directly without being redirected the `redirect_url` query param will not be there, to prevent this we recommend you always specify the redirect in the link when sharing it. 
+
+#### Example
+
+In this example, the domain is `myapp.com`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://myapp.com/dashboard` after they are signed in.
+
+`https://accounts.myapp.com/sign-in?redirect_url=https://myapp.com/dashboard`
+
+
+#### Fallback redirects
+
+In case a user does visit directly without the query param, don't worry - Clerk offers a fallback configuration via the dashboard as well.
+
+<Steps>
+
+### Set your static fallback host
+
+Set your fallback host under **Paths** in the Clerk Dashboard. 
+
+For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. In production, we will always default to your application homepage.
+
+<Images 
+  width={3248}
+  height={2112}
+  src="/docs/images/account-portal/account_portal_paths.png"
+  alt="Account Portal paths"
+/>
+  
+### Configure fallback redirects
+
+Specify the fallback redirects under **Account Portal -> Redirects** in the Clerk Dashboard.
+
+<Images 
+  width={3248}
+  height={2112}
+  src="/docs/images/account-portal/account_portal_redirects.png"
+  alt="Account Portal redirects"
+/>
+
+</Steps>
