--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -15,62 +15,16 @@ Once your application is set up, all you have to do is fire it up. Clerk will au
   For development environments, the development host (e.g. http://localhost:3000) is dynamically detected by Clerk at runtime and tied to your client browser. We store this as the ‘home origin’ for your application and it is equivalent to your application domain in production environments.
 </Callout>
 
-## Fallback redirects
+## Accessing your pages
 
-After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application by appending a `redirect_url` query param on the Account Portal page. However, if a user accesses an Account Portal page directly, they cannot be redirected back to your application since they didn't originate from your application. Don't worry, Clerk offers configurable fallback redirects.
+For development environments, Clerk will issue you a randomly generated domain on "accounts.dev". In production, by default, the URLs for your Account Portal are the following:
 
-<Steps>
+```sh
+<https://accounts>.[your-domain].com/sign-in
+<https://accounts>.[your-domain].com/sign-up
+<https://accounts>.[your-domain].com/user
+<https://accounts>.[your-domain].com/organization
+<https://accounts>.[your-domain].com/create-organization
+```
 
-### Set your static fallback host
-
-Set your fallback host under **Paths** in the Clerk Dashboard. 
-
-For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. In production, this will always be your application homepage.
-
-<Images 
-  width={3248}
-  height={2112}
-  src="/docs/images/account-portal/account_portal_paths.png"
-  alt="Account Portal paths"
-/>
-  
-### Configure fallback redirects
-
-Specify the fallback redirects under **Account Portal -> Redirects** in the Clerk Dashboard.
-
-<Images 
-  width={3248}
-  height={2112}
-  src="/docs/images/account-portal/account_portal_redirects.png"
-  alt="Account Portal redirects"
-/>
-
-</Steps>
-
-## Direct links
-
-If you would like to provide users with a direct link to an Account Portal page, you need to specify the redirect in the link so that users can be redirected to your application after their Account Portal flow.
-
-### Development 
-
-For development instances, you can use the following format for your direct links:
-
-`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=http://localhost:3000/dashboard`
-
-#### Example
-
-In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `http://localhost:3000/dashboard` after their Account Portal flow.
-
-`https://accounts.clerk.dev/sign-in?redirect_url=http://localhost:3000/dashboard`
-
-### Production
-
-For production instances, you can use the following format for your direct links:
-
-`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=https://<your-domain.com>/dashboard`
-
-#### Example
-
-In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://clerk.dev/dashboard` after their Account Portal flow.
-
-`https://accounts.clerk.dev/sign-in?redirect_url=https://clerk.dev/dashboard`
+You can access these links under **Account Portal -> Pages** in your Clerk dashboard.
