--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -15,9 +15,38 @@ Once your application is set up, all you have to do is fire it up. Clerk will au
   For development environments, the development host (e.g. http://localhost:3000) is dynamically detected by Clerk at runtime and tied to your client browser. We store this as the ‘home origin’ for your application and it is equivalent to your application domain in production environments.
 </Callout>
 
+## Accessing your pages
+
+For development environments, Clerk will issue you a randomly generated domain on "accounts.dev". In production, by default, the URLs for your Account Portal are the following:
+
+```sh
+https://accounts.<your-domain>.com/sign-in
+https://accounts.<your-domain>.com/sign-up
+https://accounts.<your-domain>.com/user
+https://accounts.<your-domain>.com/organization
+https://accounts.<your-domain>.com/create-organization
+```
+
+You can access these links under **Account Portal -> Pages** in your Clerk dashboard.
+
+## Direct links
+
+If a user accesses an Account Portal page directly, the `redirect_url` query param will not be present, so the user cannot be redirected back to your application once they are finished with their Account Portal flow. To prevent this, it is recommend that you always specify the redirect in the link when sharing it. 
+
+You can use the following format for your direct links:
+
+`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=https://<your-domain.com>/dashboard`
+
+### Example
+
+In this example, the domain is `myapp.com`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://myapp.com/dashboard` after they are signed in.
+
+`https://accounts.myapp.com/sign-in?redirect_url=https://myapp.com/dashboard`
+
+
 ## Fallback redirects
 
-After a user has finished their flow in an Account Portal page, Clerk automatically redirects them back to your application by appending a `redirect_url` query param on the Account Portal page. However, if a user accesses an Account Portal page directly, they cannot be redirected back to your application since they didn't originate from your application. Don't worry, Clerk offers configurable fallback redirects.
+In the case that a user does visit an Account Portal page directly without the query param, don't worry - Clerk offers a fallback configuration via the [Clerk Dashboard](https://dashboard.clerk.com).
 
 <Steps>
 
@@ -25,7 +54,7 @@ After a user has finished their flow in an Account Portal page, Clerk automatica
 
 Set your fallback host under **Paths** in the Clerk Dashboard. 
 
-For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. In production, this will always be your application homepage.
+For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. In production, we will always default to your application homepage.
 
 <Images 
   width={3248}
@@ -46,31 +75,3 @@ Specify the fallback redirects under **Account Portal -> Redirects** in the Cler
 />
 
 </Steps>
-
-## Direct links
-
-If you would like to provide users with a direct link to an Account Portal page, you need to specify the redirect in the link so that users can be redirected to your application after their Account Portal flow.
-
-### Development 
-
-For development instances, you can use the following format for your direct links:
-
-`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=http://localhost:3000/dashboard`
-
-#### Example
-
-In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `http://localhost:3000/dashboard` after their Account Portal flow.
-
-`https://accounts.clerk.dev/sign-in?redirect_url=http://localhost:3000/dashboard`
-
-### Production
-
-For production instances, you can use the following format for your direct links:
-
-`https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=https://<your-domain.com>/dashboard`
-
-#### Example
-
-In this example, the domain is `clerk.dev`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://clerk.dev/dashboard` after their Account Portal flow.
-
-`https://accounts.clerk.dev/sign-in?redirect_url=https://clerk.dev/dashboard`
