--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -14,13 +14,28 @@ Clerk offers the ability to override the strings for all of the elements in each
 
 The `@clerk/localizations` package contains predefined localizations for the Clerk Components. Clerk currently supports:
 
-*   frFR for fr-FR
-*   deDE for de-DE
-*   esES for es-ES
-*   itIT for it-IT
-*   ptBR for pt-BR
-*   jaJP for ja-JP
-*   enUS for en-US (default)
+*   cz-CZ
+*   da-DK
+*   de-DE
+*   el-GR
+*   en-US (default)
+*   es-ES
+*   fr-FR
+*   he-IL
+*   it-IT
+*   ja-JP
+*   ko-KR
+*   nb-NO
+*   nl-NL
+*   pl-PL
+*   pt-BR
+*   ru-RU
+*   sk-SK
+*   sv-SE
+*   tr-TR
+*   uk-UA
+*   vi-VN
+*   zh-CN
 
 ### Usage
 
