--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -1,16 +1,16 @@
 ---
-title: User & Organization pages | Account Portal
+title: User & Organization Pages | Account Portal
 description: In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile and Create Organization flow out of the box. 
 ---
 
-# User & Organization pages
+# User & Organization Pages
 
 In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile, and Create Organization pages out of the box. 
 
 You can use Clerk's Control Components to navigate your users to the appropriate page.
 
 
-## User Profile page
+## User Profile
 
 
 The User Profile page is full-featured account management UI that allows users to manage their profile and security settings. 
@@ -26,7 +26,7 @@ The User Profile page is full-featured account management UI that allows users t
 Redirect your authenticated users to their User Profile page using the [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile) control component.
 
 
-## Organization Profile page
+## Organization Profile
 
 The Organization Profile page is a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
@@ -42,7 +42,7 @@ Redirect your authenticated users to their Organization Profile page using the [
 
 
 
-## Create Organization page
+## Create Organization
 
 The Create Organization page is a UI that allows users to create brand new organizations within your application.
 
